Bug 402024 - Speeddial refuses to display any dials if website title contains qutation marks
Summary: Speeddial refuses to display any dials if website title contains qutation marks
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
: 396531 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-11 21:57 UTC by kali
Modified: 2018-12-24 20:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kali 2018-12-11 21:57:49 UTC
SUMMARY


STEPS TO REPRODUCE
1. Add website with <title> containing qoutes to Speeddial
2. 
3. 

OBSERVED RESULT

Uncaught SyntaxError: Unexpected token t in JSON at position 89392
    at JSON.parse (<anonymous>)
    at HTMLDocument.init (VM1092 userscript:_falkon_speeddial:453)

No Dails are displayed anymore.

EXPECTED RESULT

Dials are still displayed.


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 David Rosca 2018-12-24 14:20:06 UTC
Git commit a6c266b6c6e3159a51dd8985fafac20b35ab20df by David Rosca.
Committed on 24/12/2018 at 12:41.
Pushed by drosca into branch 'master'.

SpeedDial: Base64 encode initial script

Fixes parse errors when there is html encoded quote char.
FIXED-IN: 3.1.0

M  +1    -1    src/lib/data/html/speeddial.user.js
M  +1    -1    src/lib/network/schemehandlers/falkonschemehandler.cpp

https://commits.kde.org/falkon/a6c266b6c6e3159a51dd8985fafac20b35ab20df
Comment 2 David Rosca 2018-12-24 20:00:17 UTC
*** Bug 396531 has been marked as a duplicate of this bug. ***