SpeedDial: Base64 encode initial script

Fixes parse errors when there is html encoded quote char.

BUG: 402024
FIXED-IN: 3.1.0